Save bash history in docker container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,10 @@
         ".devcontainer/devcontainer.env",
         "--privileged"
     ],
+    "mounts": [
+        "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+        "source=qt-template-bashhistory,target=/commandhistory,type=volume"
+    ],
     "customizations": {
         "vscode": {
             "settings": {
