Updated NodeJS install in Dev Container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -91,8 +91,12 @@ RUN apt-get update -qq && export DEBIAN_FRONTEND=noninteractive && \
     doxygen graphviz ccache cppcheck libomp-dev
 
 # Install NodeJS
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash - && \
-    apt-get install -y nodejs
+RUN mkdir -p /etc/apt/keyrings
+RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+ARG NODE_MAJOR=18
+RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
+RUN apt-get update -qq && \
+    apt-get install -y --no-install-recommends nodejs
 
 # Install include-what-you-use
 ENV IWYU /home/iwyu
@@ -166,8 +170,3 @@ RUN sed -i '/^plugins/c\plugins=(git zsh-autosuggestions sudo web-search copypat
 RUN sed -i '/^ZSH_THEME/c\ZSH_THEME=""' ~/.zshrc
 
 ENV CPM_SOURCE_CACHE=/home/$USERNAME/.cache/CPM
-# Include project
-#ADD . /workspaces/cpp_starter_project
-#WORKDIR /workspaces/cpp_starter_project
-
-# CMD ["/bin/bash"]
