Removed KDDockWidgets dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,8 +55,7 @@ endif()
 target_link_system_libraries(${CMAKE_PROJECT_NAME} PRIVATE
     Qt::Core
     Qt::Gui
-    Qt::Widgets
-    KDAB::kddockwidgets)
+    Qt::Widgets)
 
 if (USE_SPDLOG)
   target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE USE_SPDLOG)
